aggiunti padding alla classe generale degli "li"

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ ul{
     text-align: center;
     align-items: center;
     background-color: #1389B2;
+    padding: 5px;
 }
 
 .fizz{
@@ -52,5 +53,5 @@ ul{
 }
 
 .fizzbuzz{
-    background-color: #8C2941;
+    background-color: #F0466F;
 }
